Added cordova plugins

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "cordova-plugin-statusbar",
     "cordova-plugin-device",
     "cordova-plugin-splashscreen",
-    "ionic-plugin-keyboard"
+    "ionic-plugin-keyboard",
+    "cordova-sqlite-storage"
   ],
   "cordovaPlatforms": [],
   "description": "quicklist: An Ionic project"
